# shop_fastapi

./: .gitignore  Makefile  README.md  ReadDocker.md  ctspk.sql  mysql-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 036f0244796c_product_rating.py  450dde4f7e7e_product_images_field_added_rating_.py  b4c2cf38b1ba_category_add.py  c70b2d20f197_initiate.py
src/: config.py  main.py
src/api/core/: __init__.py  dependencies.py  pydantic.py  response.py  security.py  utility.py
src/api/core/decorator/: __init__.py
src/api/core/dependencies/: __init__.py  query_params.py
src/api/core/operation/: __init__.py  list_operation_helper.py
src/api/models/: __init__.py  baseModel.py  categoryModel.py  productModel.py  ratingModel.py  roleModel.py  userModel.py
src/api/router/: authRoute.py  categoryRoute.py  productRoute.py  ratingRoute.py  roleRoute.py  userRoute.py
src/lib/: db_con.py
